# conversational-collapse

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: test_config.yaml
doc/: architecture.py  contributing.md  how_to_run_experiments.md
notebooks/: drift_analyzer_test.ipynb  initialize_raven_models.ipynb  test_analyzer_non-sense_text.ipynb
notebooks/extended_analysis/: llama_sharegpt_analysis.ipynb
notebooks/structured_analysis/: single_agent_setting_pivot.ipynb  test_run_experiment.ipynb
scripts/: run_experiment.sh  test_interp.sh  testing.sh
scripts/inference/: run_inference.py  run_inference.sh
scripts/inference/image_definitions/: inference_image.def  requirements.txt
scripts/interpretability/: test.py  testing.py  vis_text_entropy.py  visualize_interp_output.py  visualizing.py
src/: main.py
src/api/: interp_inference.py
src/api/interpretability_tools/: utils.py
src/babel_ai/: agent.py  experiment.py
src/models/: api.py  configs.py  metrics.py
tests/integration/: test_experiment_integration.py  test_huggingface_integration.py  test_main_terminal.py
tests/unit_tests/: test_agent.py  test_graphical_analysis_data_utils.py  test_graphical_analysis_data_utils_extra.py  test_interp_inference.py  test_llm_drift.py  test_main.py  test_models.py
tests/unit_tests/prompt_fetchers/: test_base_fetcher.py  test_random_fetcher.py  test_topical_chat_fetcher.py
